--- a/cetus-vortal-war/WebContent/pages/portal/ini.xhtml
+++ b/cetus-vortal-war/WebContent/pages/portal/ini.xhtml
@@ -4,43 +4,43 @@
 		with actual data.
 	 -->
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:ui="http://java.sun.com/jsf/facelets"
-	template="/pages/templates/portalTemplate.xhtml">
+  xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:ui="http://java.sun.com/jsf/facelets"
+  template="/pages/templates/portalTemplate.xhtml">
 
-	<h:outputStylesheet library="css" name="estilo.css" />
-	<ui:define name="top">
-		<ui:include src="/pages/portal/header.xhtml" />
-	</ui:define>
-	<ui:define name="left">
-		<p:idleMonitor onactive="sessionTimeOutDialog.show();" timeout="#{session.maxInactiveInterval * 1000}" />
-		<p:dialog header="#{msg.session_expired}" widgetVar="sessionTimeOutDialog" appendToBody="true" modal="true"
-			fixedCenter="true" closable="false" width="400" visible="false">
-			<form action="#{facesContext.externalContext.requestContextPath}/">
-				<input id="confirmBackToLogin" type="button" value="#{msg.init_session}"
-					onclick="window.location='#{facesContext.externalContext.requestContextPath}/';" />
-			</form>
-		</p:dialog>
-		<h:form id="form2" prependId="false">
-			<p:growl id="messages" showDetail="true" />
-			<p:tree value="#{portalManagedBean.root}" var="node" dynamic="true" cache="true" selectionMode="single"
-				selection="#{portalManagedBean.selectedNode}">
-				<p:ajax event="select" update=":formContenido2:contenido" process="@form" async="false"
-					listener="#{portalManagedBean.onNodeSelect}" />
-				<p:treeNode collapsedIcon="ui-icon-folder-collapsed" expandedIcon="ui-icon-folder-open">
-					<h:outputText value="#{node.nombre}" />
-				</p:treeNode>
-			</p:tree>
-		</h:form>
+  <h:outputStylesheet library="css" name="estilo.css" />
+  <ui:define name="top">
+    <ui:include src="/pages/portal/header.xhtml" />
+  </ui:define>
+  <ui:define name="left">
+    <p:idleMonitor onactive="sessionTimeOutDialog.show();" timeout="#{session.maxInactiveInterval * 1000}" />
+    <p:dialog header="#{msg.session_expired}" widgetVar="sessionTimeOutDialog" appendToBody="true" modal="true"
+      fixedCenter="true" closable="false" width="400" visible="false">
+      <form action="#{facesContext.externalContext.requestContextPath}/">
+        <input id="confirmBackToLogin" type="button" value="#{msg.init_session}"
+          onclick="window.location='#{facesContext.externalContext.requestContextPath}/';" />
+      </form>
+    </p:dialog>
+    <h:form id="form2" prependId="false">
+      <p:growl id="messages" showDetail="true" />
+      <p:tree value="#{portalManagedBean.root}" var="node" dynamic="true" cache="true" selectionMode="single"
+        selection="#{portalManagedBean.selectedNode}">
+        <p:ajax event="select" update=":formContenido2:contenido" process="@form" async="false"
+          listener="#{portalManagedBean.onNodeSelect}" />
+        <p:treeNode collapsedIcon="ui-icon-folder-collapsed" expandedIcon="ui-icon-folder-open">
+          <h:outputText value="#{node.nombre}" />
+        </p:treeNode>
+      </p:tree>
+    </h:form>
 
-	</ui:define>
-	<ui:define name="content">
-		<p:growl id="growl" showDetail="true" life="3000" />
-		<h:form id="formContenido2" prependId="false">
-			<p:outputPanel id="contenido" autoUpdate="false">
-				<iframe align="top" style="height: 570px;" src="#{portalManagedBean.page}" frameborder="0" width="100%" height="200" />
-			</p:outputPanel>
-		</h:form>
-		<ui:include src="/pages/portal/dialog.xhtml" />
-	</ui:define>
+  </ui:define>
+  <ui:define name="content">
+    <p:growl id="growl" showDetail="true" life="3000" />
+    <h:form id="formContenido2" prependId="false" style="height: 100%;">
+      <p:outputPanel id="contenido" autoUpdate="false">
+        <iframe align="top" style="height: 100%;" src="#{portalManagedBean.page}" frameborder="0" width="100%" />
+      </p:outputPanel>
+    </h:form>
+    <ui:include src="/pages/portal/dialog.xhtml" />
+  </ui:define>
 
 </ui:composition>
