--- a/cetus-vortal-war/WebContent/pages/admin_portal/general_search/dialog.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/general_search/dialog.xhtml
@@ -8,12 +8,12 @@
     <ui:include src="/pages/admin_portal/general_search/view.xhtml" />
   </p:dialog>
 
-  <h:form id="formConfirm" prependId="false">
+  <h:form id="formConfirmDel" prependId="false">
     <p:confirmDialog id="dialogDelete" appendToBody="true" message="#{msg.confirm_delete}"
       header="#{msg.delete_register}" severity="alert" widgetVar="confirmDialogDelete">
       <center>
         <p:commandButton id="confirm" value="#{msg.accept}" update=":formContenido:men :formContenido:list"
-          oncomplete="confirmDialogDelete.hide()" process="@this" action="#{componentManagedBean.delete}" />
+          oncomplete="confirmDialogDelete.hide()" process="@this" action="#{generalSearchMBean.delete}" />
         <p:commandButton id="decline" value="#{msg.cancel}" onclick="confirmDialogDelete.hide()" type="button" />
       </center>
     </p:confirmDialog>
@@ -21,24 +21,39 @@
 
 
   <p:dialog id="dialogAdd" modal="true" appendToBody="true" header="#{msg.add_register}" widgetVar="add"
-    resizable="false" showEffect="clip" hideEffect="fold" >
-    <ui:include src="/pages/admin_portal/general_search/add.xhtml"/>
+    resizable="false" showEffect="clip" hideEffect="fold">
+    <ui:include src="/pages/admin_portal/general_search/add.xhtml" />
   </p:dialog>
 
-  <p:dialog id="dialogUpd" modal="true" appendToBody="true" header="#{msg.update}" widgetVar="update" resizable="false"
-    showEffect="clip" hideEffect="fold">
-  </p:dialog>
 
   <h:form id="formConfirmAdd" prependId="false">
     <p:confirmDialog id="confirmDialog" message="#{msg.confirm_operation}" appendToBody="true" header="#{msg.add}"
       severity="alert" widgetVar="confirmation" visible="#{generalSearchMBean.showConfirmAdd}">
       <center>
         <p:commandButton id="confirmAdd" value="#{msg.accept}"
-          update=":formContenido:men :formContenido:list :formAdd:grid"
-          oncomplete="confirmation.hide(); add.hide();" actionListener="#{generalSearchMBean.add}"
-          process="@this" />
+          update=":formContenido:men :formContenido:list :formAdd:grid" oncomplete="confirmation.hide(); add.hide();"
+          actionListener="#{generalSearchMBean.add}" process="@this" />
         <p:commandButton id="declineRol" value="#{msg.cancel}" onclick="confirmation.hide();" type="button" />
       </center>
     </p:confirmDialog>
   </h:form>
+
+  <p:dialog id="dialogUpd" modal="true" appendToBody="true" header="#{msg.update_register}" widgetVar="update"
+    resizable="false" showEffect="clip" hideEffect="fold">
+    <ui:include src="/pages/admin_portal/general_search/update.xhtml" />
+  </p:dialog>
+  
+    <h:form id="formConfirmUpd" prependId="false">
+    <p:confirmDialog id="confirmDialogUpd" message="#{msg.confirm_operation}" appendToBody="true" header="#{msg.update_register}"
+      severity="alert" widgetVar="confirmationUpd" visible="#{generalSearchMBean.showConfirmUpd}">
+      <center>
+        <p:commandButton id="confirmUpd" value="#{msg.accept}"
+          update=":formContenido:men :formContenido:list" oncomplete="confirmationUpd.hide(); update.hide();"
+          actionListener="#{generalSearchMBean.update}" process="@this" />
+        <p:commandButton id="cancelUpd" value="#{msg.cancel}" onclick="confirmationUpd.hide()" type="button" />
+      </center>
+    </p:confirmDialog>
+  </h:form>
+  
+  
 </ui:composition>
