Desarrollo de la tarea de busqueda general en vortal

--- a/cetus-vortal-war/WebContent/pages/admin_portal/general_search/add.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/general_search/add.xhtml
@@ -8,7 +8,7 @@
       <h:panelGrid id="grid" columns="6">
         <p:outputLabel for="description_search" value="#{msg.description}:" styleClass="resaltar_negro" />
         <p:inputText id="description_search" required="true" value="#{generalSearchMBean.addObject.description}"
-          style="width:250px" requiredMessage="#{msg.field_requiered}" />
+          style="width:250px" requiredMessage="#{msg.field_requiered}" maxlength="30" />
         <p:message id="description_search_msg" for="description_search" display="icon" />
 
         <p:outputLabel value="#{msg.app}:" for="appAdd" styleClass="resaltar_negro" />
@@ -50,34 +50,34 @@
         </f:facet>
 
         <p:outputLabel for="filter1" value="#{msg.filter1}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter1" value="#{generalSearchMBean.filter1.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter1" value="#{generalSearchMBean.filter1.label}" />
 
         <p:outputLabel for="filter2" value="#{msg.filter2}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter2" value="#{generalSearchMBean.filter2.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter2" value="#{generalSearchMBean.filter2.label}" />
 
         <p:outputLabel for="filter3" value="#{msg.filter3}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter3" value="#{generalSearchMBean.filter3.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter3" value="#{generalSearchMBean.filter3.label}" />
 
         <p:outputLabel for="filter4" value="#{msg.filter4}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter4" value="#{generalSearchMBean.filter4.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter4" value="#{generalSearchMBean.filter4.label}" />
 
         <p:outputLabel for="filter5" value="#{msg.filter5}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter5" value="#{generalSearchMBean.filter5.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter5" value="#{generalSearchMBean.filter5.label}" />
 
         <p:outputLabel for="filter6" value="#{msg.filter6}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter6" value="#{generalSearchMBean.filter6.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter6" value="#{generalSearchMBean.filter6.label}" />
 
         <p:outputLabel for="filter7" value="#{msg.filter7}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter7" value="#{generalSearchMBean.filter7.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter7" value="#{generalSearchMBean.filter7.label}" />
 
         <p:outputLabel for="filter8" value="#{msg.filter8}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter8" value="#{generalSearchMBean.filter8.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter8" value="#{generalSearchMBean.filter8.label}" />
 
         <p:outputLabel for="filter9" value="#{msg.filter9}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter9" value="#{generalSearchMBean.filter9.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter9" value="#{generalSearchMBean.filter9.label}" />
 
         <p:outputLabel for="filter10" value="#{msg.filter10}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filter10" value="#{generalSearchMBean.filter10.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filter10" value="#{generalSearchMBean.filter10.label}" />
       </h:panelGrid>
 
 
