--- a/cetus-vortal-war/WebContent/pages/admin_portal/general_search/update.xhtml
+++ b/cetus-vortal-war/WebContent/pages/admin_portal/general_search/update.xhtml
@@ -8,7 +8,7 @@
       <h:panelGrid id="panelSearch" columns="6">
         <p:outputLabel for="description_search_upd" value="#{msg.description}:" styleClass="resaltar_negro" />
         <p:inputText id="description_search_upd" required="true" value="#{generalSearchMBean.selectedObject.description}"
-          style="width:250px" requiredMessage="#{msg.field_requiered}" />
+          style="width:250px" requiredMessage="#{msg.field_requiered}" maxlength="30" />
         <p:message id="description_search_msg_upd" for="description_search_upd" display="icon" />
 
         <p:outputLabel value="#{msg.app}:" for="appUpd" styleClass="resaltar_negro" />
@@ -50,34 +50,34 @@
         </f:facet>
 
         <p:outputLabel for="filterUpd1" value="#{msg.filter1}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd1" value="#{generalSearchMBean.filter1.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd1" value="#{generalSearchMBean.filter1.label}" />
 
         <p:outputLabel for="filterUpd2" value="#{msg.filter2}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd2" value="#{generalSearchMBean.filter2.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd2" value="#{generalSearchMBean.filter2.label}" />
 
         <p:outputLabel for="filterUpd3" value="#{msg.filter3}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd3" value="#{generalSearchMBean.filter3.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd3" value="#{generalSearchMBean.filter3.label}" />
 
         <p:outputLabel for="filterUpd4" value="#{msg.filter4}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd4" value="#{generalSearchMBean.filter4.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd4" value="#{generalSearchMBean.filter4.label}" />
 
         <p:outputLabel for="filterUpd5" value="#{msg.filter5}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd5" value="#{generalSearchMBean.filter5.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd5" value="#{generalSearchMBean.filter5.label}" />
 
         <p:outputLabel for="filterUpd6" value="#{msg.filter6}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd6" value="#{generalSearchMBean.filter6.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd6" value="#{generalSearchMBean.filter6.label}" />
 
         <p:outputLabel for="filterUpd7" value="#{msg.filter7}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd7" value="#{generalSearchMBean.filter7.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd7" value="#{generalSearchMBean.filter7.label}" />
 
         <p:outputLabel for="filterUpd8" value="#{msg.filter8}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd8" value="#{generalSearchMBean.filter8.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd8" value="#{generalSearchMBean.filter8.label}" />
 
         <p:outputLabel for="filterUpd9" value="#{msg.filter9}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd9" value="#{generalSearchMBean.filter9.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd9" value="#{generalSearchMBean.filter9.label}" />
 
         <p:outputLabel for="filterUpd10" value="#{msg.filter10}:" styleClass="resaltar_negro" />
-        <p:inputText style="width:250px" maxlength="44" id="filterUpd10" value="#{generalSearchMBean.filter10.label}" />
+        <p:inputText style="width:250px" maxlength="30" id="filterUpd10" value="#{generalSearchMBean.filter10.label}" />
       </h:panelGrid>
 
 
